<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易绿生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="index_category_vegetables">健康蔬菜</string>
    <string name="index_category_fruits">精品水果</string>
    <string name="index_category_grain">五味粮油</string>
    <string name="index_category_seafood">海鲜水产</string>
    <string name="index_category_cookedfood">酱货熟食</string>
    <string name="index_category_drinks">饮品酒水</string>
    <string name="index_category_meat">禽蛋鲜肉</string>
    <string name="index_category_outdoor">爱尚野味</string>
    <string name="index_category_tea">茶香古道</string>
    
    <string name="index_category_shilingzhong">时令钟</string>
    <string name="index_category_youhui">优惠</string>
    <string name="index_category_yuding">预定</string>
    <string name="index_category_meishi">美食</string>
    
    <string name="index_article_shipu">美食食谱</string>
    <string name="index_article_yisheng">美食医生</string>
    <string name="index_article_greenlife">绿色时光</string>
    <string name="index_article_minsu">民俗风情</string>
    
    <string name="txt_index">首页</string>
    <string name="txt_order">订单</string>
    <string name="txt_my">我的</string>
    <string name="txt_back">返回</string>
    <string name="title_merchant_list">商铺列表</string>
    <string name="title_product_list">产品列表</string>
    <string name="txt_make_order">下单</string>
    <string name="txt_merchant_sleep">商铺休息中</string>
    
    
      <string name="order_commit">提交订单</string>
    <string name="order_pay_type">支付方式</string>
    <string name="order_pay_type_default">货到付款</string>
    <string name="order_pay_type_wechat">微信支付</string>
    <string name="order_pay_type_alipay">支付宝支付</string>
    <string name="order_send_time">送货时间</string>
    <string name="order_send_time_now">立即送货</string>
    <string name="order_send_mark">送货备注</string>
    <string name="order_send_mark_hint">（选填）可输入特殊要求</string>
    <string name="txt_coupon">代金券</string>
    <string name="txt_coupon_tips">代金券不与其他优惠同享（立减优惠，新用户立减）</string>
    <string name="txt_send_price">配送费</string>
    <string name="txt_send_box_price">餐盒费</string>
    <string name="txt_coupon_price">宅家代金券</string>
    <string name="order_total" formatted="false">已经优惠:¥%s  总计:¥%s</string>
    <string name="order_total_only">总计:¥%s</string>
    <string name="order_confirm">确认下单</string>
    
    <string name="pay_title">支付收银台</string>
    <string name="pay_old_price">原价：</string>
    <string name="pay_price">收付金额：</string>
    <string name="pay_confirm">确认支付</string>
    
    <string name="search_hint">请输入关键字搜索</string>
    
       <string name="order_state">订单状态</string>
    <string name="order_detail">订单详情</string>
    <string name="order_state_commit">订单提交成功</string>
    <string name="order_state_topay">待支付</string>
    <string name="order_state_merchant">商家已经确认订单</string>
    <string name="order_state_to_merhant">配送员正赶往餐厅</string>
    <string name="order_state_sending">配送员已经取餐</string>
    <string name="order_state_over">已送达，订单完成</string>
    <string name="order_again">再来一单</string>
    
    <string name="title_article_list">文章列表</string>
    <string name="title_article_detail">文章详情</string>
    
      <string name="login_username_hint">手机号/用户名/邮箱</string>
    <string name="login_password_hint">密码</string>
    <string name="login_text">登录</string>
     <string name="register_text">注册</string>
    <string name="login_forgetpassword">忘记密码?</string>
    <string name="login_username_register">用户名</string>
    <string name="login_passwordcheck_register">重新输入密码</string>
	<string name="login_phone_register">手机号</string>
	<string name="login_getCode_register">获取验证码</string>
	<string name="login_direct_register">直接登录</string>
	
	 <string name="connect_server_fail">服务器连接失败</string>
    <string name="network_error">连接网络失败，请连接网络</string>
    <string name="loading">加载中...</string>
    
    <string name="order_need_login">您还没有登录，请登录后查看订单</string>
     <string name="txt_login_register">登录</string>
     
     
      <string name="order_state_null"></string>
    <string name="order_state_0">已取消</string>
    <string name="order_state_1">提交成功</string>
    <string name="order_state_2">等待支付</string>
    <string name="order_state_3">已支付</string>
    <string name="order_state_4">商家确认</string>
    <string name="order_state_5">配送员赶往商家取餐(取餐中)</string>
    <string name="order_state_6">配送员已取餐（送餐中）</string>
    <string name="order_state_7">已送达</string>
    <string name="order_state_8">待评价</string>
    <string name="order_state_9">订单完成</string>
    <string name="order_state_10">退款中</string>
    <string name="order_state_11">已退款</string>
    <string name="order_state_21">商户投诉用户（用户恶意下单）</string>
    <string name="order_state_22">用户投诉商户（商家不诚信）</string>
    
        <string name="format_order_total_price">总价：¥%s元</string>
      <string name="order_option_cancel">取消订单</string>
    <string name="order_option_pay">支付</string>
    <string name="order_option_reminder">催单</string>
    <string name="order_option_comment">评价</string>
    <string name="order_cancel_success">取消订单成功</string>
    
    <string name="format_order_detail">本单由%s配送并提供售后服务</string>
    <string name="format_order_contact">联系人：%s</string>
    <string name="format_order_mobile">电话：%s</string>
    <string name="format_order_address">送餐地址：%s</string>
    <string name="format_order_paytype">支付方式：%s</string>
    <string name="format_order_sendtime">期望送达时间：%s</string>
    <string name="format_order_note">备注信息：%s</string>
    <string name="add_coupon_success">添加代金券成功</string>

    <string name="make_phone_call">是否拨打：</string>
    <string name="news_detail">详情</string>
    
     <string name="format_food_detail" formatted="false">已售%s%s  推荐%s</string>
    <string name="format_total_money">合计：¥%s</string>
    <string name="txt_food_send_price">配送费</string>
    <string name="txt_food_box_price">餐盒费</string>
    <string name="toast_choose_address">请选择送餐地址</string>
    <string name="toast_delete_success">删除成功</string>
    <string name="toast_collect_fail">收藏失败</string>
    <string name="toast_collect_success">收藏成功</string>
    <string name="toast_collect_delete_fail">删除收藏失败</string>
    <string name="toast_collect_delete_success">删除收藏成功</string>

    <string name="txt_ok">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_exit">退出</string>
    
      <string name="order_contact_merchant">联系商家</string>
    <string name="order_tousu_merchant">投诉商家</string>
    
    <string name="search_current_location">定位当前位置</string>
    <string name="search_merchant">(店铺)%s</string>
    <string name="search_food">(菜名)%s</string>
    <string name="search_category">(分类)%s</string>
    <string name="search_clear_history">清除搜索历史</string>
    <string name="txt_food_kexuan">可选规格</string>
    <string name="txt_food_choose_ok">选好了</string>
    <string name="txt_shop_car">购物车</string>
    <string name="txt_shop_car_clear">清空全部</string>
    <string name="add_to_shop_car">加入购物车</string>
    <string name="txt_price">单价：</string>
    <string name="txt_number">数量：</string>
    <string name="txt_address">地址：</string>
    <string name="txt_product_detail">商品详情</string>
    
     <string name="txt_format_time">%s分钟</string>
    <string name="txt_format_price">¥%s</string>
    
     <string name="txt_my_address">送餐地址</string>
     
       <string name="hint_input_mobile">请输入您的手机号</string>
    <string name="txt_address_add">＋新增送餐地址</string>
    <string name="txt_address_delete">－删除地址</string>
    
    <string name="title_add_new_address">新增地址</string>
    
    <string name="txt_contact">联系人</string>
    <string name="txt_contact_hint">您的姓名</string>
    <string name="txt_man">先生</string>
    <string name="txt_woman">女士</string>
    <string name="txt_address_food">收餐地址</string>
    <string name="txt_address_food_hint">请选择小区，大厦或学校</string>
    <string name="txt_door_num">门牌号</string>
    <string name="txt_door_num_hint">请输入门牌号等详细信息</string>
    <string name="txt_mobile">手机</string>
    <string name="txt_mobile_hint">配送人员联系您的方式</string>
    
       <string name="txt_commit">提交</string>
    <string name="txt_save">保存</string>
    
      <string name="txt_merchant_detail_time">平均送达时间</string>
    <string name="txt_merchant_detail_mic_price">起送价</string>
    <string name="txt_merchant_detail_price">配送费</string>
    
    
    <string name="txt_my_daijinquan">我的代金券</string>
    <string name="txt_my_tuikuan">我的退款</string>
    <string name="txt_my_shoucang">我的收藏</string>
    <string name="txt_my_pinglun">我的评论</string>
    <string name="txt_my_change_psw">修改密码</string>
    <string name="txt_my_info">我的信息</string>
    <string name="txt_kefu">客服%s</string>
    
    
       <string name="txt_merchant_diancan">点餐</string>
    <string name="txt_merchant_pingjia">评价</string>
    <string name="txt_merchant_shangjia">商家</string>
    
    <string name="txt_comment_whole">整体评价</string>
    <string name="txt_comment_service">送餐服务</string>
    <string name="txt_comment_food">菜品质量</string>
    <string name="txt_comment_user">用户评价</string>
    <string name="txt_comment_format_whole">全部(%s)</string>
    <string name="txt_comment_format_notnull">有内容(%s)</string>
    
    <string name="txt_comment_format_speed">送餐速度：%s分钟</string>
       <string name="collect_food">产品</string>
       
        <string name="txt_reset_password">修改密码</string>
    <string name="txt_password_old">旧密码</string>
    <string name="txt_password_new">新密码</string>
    
     <string name="txt_login">登录</string>
    <string name="txt_login_mobile">手机</string>
    <string name="txt_login_mobile_hint">请输入账户</string>
    <string name="txt_login_password">密码</string>
    <string name="txt_login_password_hint">请输入密码</string>
    <string name="txt_login_forget_password">忘记密码</string>
    <string name="txt_login_now">立即登录</string>
    <string name="txt_register_now">没有账号，现在注册</string>
    
     <string name="txt_register">注册</string>
    <string name="txt_register_username">用户名称</string>
    <string name="txt_register_mobile">手机号码</string>
    <string name="txt_register_captcha">验证码</string>
    <string name="txt_register_password">密码</string>
    <string name="txt_register_password_again">确认密码</string>
    <string name="txt_register_username_hint">请输入用户名称</string>
    <string name="txt_register_mobile_hint">请输入手机号码</string>
    <string name="txt_register_password_hint">请输入密码</string>
    <string name="txt_register_password_old_hint">请输入旧密码</string>
    <string name="txt_register_password_again_hint">请输入确认密码</string>
    <string name="txt_register_get">获取</string>
    <string name="txt_register_agree">我已阅读并同意</string>
    <string name="txt_register_tos">使用条款和隐私政策</string>
    <string name="txt_register_next">下一步</string>
    
    <string name="txt_forget_password">忘记密码</string>
    
      <string name="register_success">注册信息已提交</string>
    <string name="psw_not_match">确认密码不一致</string>
    <string name="getcaptcha_success">获取验证码成功</string>
    <string name="change_psw_success">修改密码成功</string>
    <string name="order_commit_success">订单提交成功</string>
    <string name="please_input_right_phone">请输入正确的手机号</string>
    <string name="toast_same_password">请输入相同的确认密码</string>
    <string name="txt_kefu_format">客服 %s</string>
    <string name="txt_kefu_tel">022-23775790</string>
</resources>
