<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_index"
    android:orientation="vertical" >

    <!--
    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="1" >
    </LinearLayout>
    -->

    <RelativeLayout
        android:id="@+id/ll_titleBar"
        style="@style/title_bar"
        android:background="@color/white" >

        <Button
            android:id="@+id/btn_back"
            style="@style/title_bar_btn"
            android:layout_alignParentLeft="true"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/btn_back_gray"
            android:drawablePadding="-15dip"
            android:text="@string/txt_back"
            android:textColor="@color/txt_gray"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/title_bar_text"
            android:gravity="center"
            android:text="@string/title_add_new_address"
            android:textColor="@color/txt_gray"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/btn_right"
            style="@style/title_bar_btn"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:button="@null"
            android:drawablePadding="5dip"
            android:text="@string/txt_save"
            android:textColor="@color/main_color"
            android:visibility="visible" />
    </RelativeLayout>

    <View style="@style/line_gray" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_contact"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_contact_hint"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />
        </LinearLayout>

        <View style="@style/line_gray" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dip" >

            <RadioButton
                android:id="@+id/radio_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:button="@null"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="10dip"
                android:gravity="center"
                android:text="@string/txt_man" />

            <RadioButton
                android:id="@+id/radio_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dip"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="10dip"
                android:gravity="center"
                android:text="@string/txt_woman" />
        </RadioGroup>

        <View style="@style/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_address_food"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_address_food_hint"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />
        </LinearLayout>

        <View style="@style/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:id="@+id/tv_door_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_door_num"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_door_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_door_num_hint"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />
        </LinearLayout>

        <View style="@style/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_mobile"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_mobile_hint"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />
        </LinearLayout>

        <View style="@style/line_gray" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_address_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/txt_address_delete"
        android:textColor="@color/main_color"
        android:textSize="16sp" />

</LinearLayout>