<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_index"
    android:orientation="vertical" >

    <!--
    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="1" >
    </LinearLayout>
    -->

    <RelativeLayout
        android:id="@+id/ll_titleBar"
        style="@style/title_bar" >

        <Button
            android:id="@+id/btn_back"
            style="@style/title_bar_btn"
            android:layout_alignParentLeft="true"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/btn_back_selector"
            android:text="@string/txt_back"
            android:textColor="@color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/title_bar_text"
            android:layout_centerInParent="true"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_right"
            style="@style/title_bar_btn"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:gravity="center_vertical|right"
            android:minWidth="70dip"
            android:paddingLeft="10dip"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:visibility="visible" />
    </RelativeLayout>

    <View style="@style/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <View style="@style/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_register_username"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_register_username_hint"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/line_gray"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_register_mobile"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_register_mobile_hint"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/line_gray"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" />

        <LinearLayout
            android:id="@+id/ll_captcha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible"
            android:padding="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_register_captcha"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_captcha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_register_captcha"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_get_captcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dip"
                android:background="@drawable/btn_login_long_selector"
                android:gravity="center"
                android:minWidth="@dimen/txt_title_add_address"
                android:padding="5dip"
                android:text="@string/txt_register_get"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <View style="@style/line_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <View style="@style/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_register_password"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_register_password_hint"
                android:padding="3dip"
                android:singleLine="true"
                android:password="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/line_gray"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="@dimen/txt_title_add_address"
                android:text="@string/txt_register_password_again"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_password_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txt_register_password_again_hint"
                android:padding="3dip"
                android:singleLine="true"
                android:password="true"
                android:textColor="@color/txt_black"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/line_gray"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0dip" >
<CheckBox
                android:id="@+id/check_agress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:button="@null"
                android:drawableLeft="@drawable/radio_register_agree_selector"
                android:drawablePadding="10dip"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/txt_black"
                android:text="@string/txt_register_agree" />
        <TextView
            android:id="@+id/tv_tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:gravity="center_vertical|left"
            android:padding="0dip"
            android:text="@string/txt_register_tos"
            android:textColor="@color/txt_blue"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_margin="10dip"
        android:background="@drawable/btn_login_long_selector"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/txt_register_next"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>